# frontend-test

backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  routers.py
backend/app/schemas/: chat_schema.py
backend/app/services/chat/: answer.py  chat_service.py  stream_answer.py
backend/app/utils/: agents_helper.py  clients.py  env_vars.py  llm_helper.py  prompts.py  srch_helper.py  sse_broadcaster.py  utils.py
docs/: app.js
frontend/: app.js  index.html  styles.css
