[project]
name = "fastapi-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-search-documents>=12.0.0",
    "fastapi[standard]>=0.136.1",
    "gunicorn>=26.0.0",
    "openai>=2.36.0",
    "openai-agents>=0.17.2",
    "pytz>=2026.2",
    "uvicorn[standard]>=0.46.0",
]
